[tool.poetry]
name = "gis-application-tutorials"
version = "0.1.0"
description = ""
authors = ["SammyGIS <adedoyinsamuel25@gmail.com>"]
readme = "README.md"
packages = [{include = "gis_application_tutorials"}]

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
